--- a/src/WhoAmI.css
+++ b/src/WhoAmI.css
@@ -8,31 +8,31 @@
 	margin-inline: auto;
 }
 
-h1,h3,p {
+.whoami h1,h3,p {
 	color: #33FF00;
 	font-family: ui-monospace;
 }
 
-h1 {
+.whoami h1 {
 	text-align: center
 }
 
-p {
+.whoami p {
 	max-width: 80ch;
 }
 
-img {
+.whoami img {
 	border-radius: 3%;
 	max-width: 600px;
 	display: block;
 	margin: auto;
 }
 
-.beloved {
+.whoami .beloved {
 	max-width: 200px;
 }
 
-.caption {
+.whoami .caption {
 	color: #555;
 	font-size: 14px;
 	text-align: center;
