--- a/src/WhoAmI.css
+++ b/src/WhoAmI.css
@@ -1,14 +1,18 @@
-#root {
-	width: 100%;
+.whoamibg {
 	background: black;
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	overflow: auto;
 }
 
 .whoami {
 	max-width: fit-content;
-	margin-inline: auto;
 }
 
-.whoami h1,h3,p {
+.whoami h1,.whoami h2,.whoami p {
 	color: #33FF00;
 	font-family: ui-monospace;
 }
