--- a/src/WhoAmI.css
+++ b/src/WhoAmI.css
@@ -1,5 +1,5 @@
 .whoamibg {
-	background: black;
+	/* background: black; */
 	width: 100%;
 	height: 100vh;
 	display: flex;
@@ -13,7 +13,7 @@
 }
 
 .whoami h1,.whoami h2,.whoami p {
-	color: #33FF00;
+	/* color: #33FF00; */
 	font-family: ui-monospace;
 }
 
