--- a/src/Homepage.css
+++ b/src/Homepage.css
@@ -1,6 +1,7 @@
 .homepage {
-	display: grid block;
+	display: flex;
+	flex-direction: column;
 	height: 100vh;
 	align-items: center;
-	grid-template-columns: auto 1fr 1fr;
+	justify-content: center;
 }
